--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".RestaurantInfoActivity"
-            android:theme="@style/RestaurantInfoActivity">
+        <activity android:name=".ItemMenuDescriptionActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:parentActivityName=".RestaurantInfoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RestaurantListActivity">
-        </activity>
+        <activity
+            android:name=".RestaurantInfoActivity"
+            android:theme="@style/RestaurantInfoActivity"></activity>
+        <activity android:name=".RestaurantListActivity"></activity>
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".RegisterActivity"
