--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ItemMenuDescriptionActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:parentActivityName=".RestaurantInfoActivity">
+        <activity android:name=".ItemMenuDescriptionActivity" android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+        <activity android:name=".RestaurantInfoActivity" android:theme="@style/RestaurantInfoActivity"></activity>
+        <activity android:name=".RestaurantListActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity" android:parentActivityName=".LoginActivity" />
+        <activity android:name=".SplashScreen" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".RestaurantInfoActivity"
-            android:theme="@style/RestaurantInfoActivity"></activity>
-        <activity android:name=".RestaurantListActivity"></activity>
-        <activity android:name=".LoginActivity" />
-        <activity
-            android:name=".RegisterActivity"
-            android:parentActivityName=".LoginActivity" />
-        <activity android:name=".SplashScreen" />
     </application>
 
 </manifest>
