--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         material_version = "1.2.1"
         glide_version = "4.11.0"
         kapt_version = "4.11.0"
+        swipe_refresh_version = "1.1.0"
     }
     repositories {
         google()
