--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation "com.google.android.material:material:${material_version}"
     implementation "com.github.bumptech.glide:glide:${glide_version}"
     kapt "com.github.bumptech.glide:compiler:${kapt_version}"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:${swipe_refresh_version}"
 }
