--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         glide_version = "4.11.0"
         kapt_version = "4.11.0"
         swipe_refresh_version = "1.1.0"
+        lifecycle_version = "2.2.0"
     }
     repositories {
         google()
